Progress with music page, just needs public site fixing to be tested properly. Starting articles.

--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@ high priority:
 low priority:
 - consider tomcat shared libs
 - update cv with more detail
+- convert music player icons to use font icons
