--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ medium priority:
 - articles:
     - devtools (private project) -> state due to IP issues
     - project sandbox (private project) -> link to functional version
+- security: CSP
 
 low priority:
 - consider tomcat shared libs
