Progress on cycling page.

--- a/TODO
+++ b/TODO
@@ -15,3 +15,4 @@ low priority:
 - consider tomcat shared libs
 - update cv with more detail
 - convert music player icons to use font icons
+- update homepage picture at the request of jack
