Initial cycling page complete.

--- a/TODO
+++ b/TODO
@@ -16,3 +16,5 @@ low priority:
 - update cv with more detail
 - convert music player icons to use font icons
 - update homepage picture at the request of jack
+- update cycling page with details about karkinos + picture
+- update cycling page with norwich 100
