Progress with documents.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 high priority:
+- build tv and binary clock gallery/documents
 - convert footer icons to svgs
 - convert nav to use ul / li
 - move songs to public.limpygnome.com, inflates war by a lot - probably wrong place to live
