Improved fonts, post about qcon, dropped music.

--- a/website/_posts/2017-08-25-defcon-25.md
+++ b/website/_posts/2017-08-25-defcon-25.md
@@ -5,10 +5,11 @@ selected: blog
 ---
 
 <a href="/assets/posts/2017-08-25-defcon-25/me.jpg">
-    <img src="/assets/posts/2017-08-25-defcon-25/me.jpg" alt="Me" class="left" />
+    <img src="/assets/posts/2017-08-25-defcon-25/me.jpg" alt="Me" class="post-thumb" />
 </a>
 
-Burner phone? Check. Laptop wiped? Check. Few WN722N adapters? Check.
+Burner phone? _Check._ Laptop wiped? _Check._ Few WN722N adapters? _Check._
+
 It was that time of year again, where the InfoSec community got together in Las Vegas for the world’s largest hacking
 conference, with an estimated 25,000 people, for three day of: talks, hacking and drinking.
 
