Article on k8 setup on raspi pi, various minor tweaks.

--- a/website/_posts/2019-03-07-qcon.md
+++ b/website/_posts/2019-03-07-qcon.md
@@ -3,6 +3,9 @@ layout: post
 title: QCON London 2019
 selected: blog
 ---
+<a href="/assets/posts/2019-03-07-qcon/thumb.png">
+    <img alt="QCON logo" src="/assets/posts/2019-03-07-qcon/thumb.png" class="post-thumb" />
+</a>
 
 I got the opportunity this year to attend the <a href="https://qconlondon.com/">QCON London</a> conference,
 ran my InfoQ, and would absolutely recommend it to anyone interested or working in the software engineering industry,
