Updates for site relaunch.

--- a/website/_posts/2019-03-07-qcon.md
+++ b/website/_posts/2019-03-07-qcon.md
@@ -62,4 +62,4 @@ Their scripts also create generic templates for new services. And such scripts h
 are routinely creating and deploying new projects to ensure they work.
 
 ## Raw Notes
-Not guaranteed to mean much, but can be found [here](https://public.marcuscraske.com/qcon-london-2019-notes.txt).
+Not guaranteed to mean much, but can be found [here](https://files.marcuscraske.com/qcon-london-2019-notes.txt).
