Minor accessibility fixes, moving towards webp, minor article updates, upgrading dependencies, start of new smart house article.

--- a/website/_posts/2017-08-25-defcon-25.md
+++ b/website/_posts/2017-08-25-defcon-25.md
@@ -4,9 +4,7 @@ title: Defcon 25
 selected: blog
 ---
 
-<a href="/assets/posts/2017-08-25-defcon-25/me.jpg">
-    <img src="/assets/posts/2017-08-25-defcon-25/me.jpg" alt="Me" class="post-thumb" />
-</a>
+{% include image.html path="/assets/posts/2017-08-25-defcon-25/me.jpg" alt="Me at Defcon" class="post-thumb" %}
 
 Burner phone? _Check._ Laptop wiped? _Check._ Few WN722N adapters? _Check._
 
